--- a/package.json
+++ b/package.json
@@ -2,151 +2,9 @@
   "name": "gdom.js",
   "version": "0.0.1",
   "description": "JS Library that handles DOM",
-  "main": "webpack.config.js",
-  "dependencies": {
-    "a-color-picker": "^1.2.1",
-    "accordion": "^3.0.2",
-    "accordion-js": "^2.8.0",
-    "acorn": "^6.4.2",
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
-    "ansi-regex": "^4.1.0",
-    "ansi-styles": "^3.2.1",
-    "anymatch": "^3.1.1",
-    "asn1.js": "^5.4.1",
-    "babel-loader": "^8.2.2",
-    "base64-js": "^1.5.1",
-    "binary-extensions": "^2.2.0",
-    "bindings": "^1.5.0",
-    "bluebird": "^3.7.2",
-    "bn.js": "^5.2.0",
-    "browserify-rsa": "^4.1.0",
-    "browserify-sign": "^4.2.1",
-    "browserslist": "^4.16.3",
-    "buffer": "^4.9.2",
-    "cacache": "^12.0.4",
-    "calendar-js": "^1.4.4",
-    "caniuse-lite": "^1.0.30001205",
-    "chalk": "^2.4.2",
-    "chokidar": "^3.5.1",
-    "chownr": "^1.1.4",
-    "colorette": "^1.2.2",
-    "convert-source-map": "^1.7.0",
-    "core-js": "^3.10.0",
-    "create-ecdh": "^4.0.4",
-    "crypto-js": "^3.3.0",
-    "css-loader": "^3.6.0",
-    "cyclist": "^1.0.1",
-    "debug": "^4.3.1",
-    "des.js": "^1.0.1",
-    "electron-to-chromium": "^1.3.707",
-    "elliptic": "^6.5.4",
-    "emojis-list": "^3.0.0",
-    "end-of-stream": "^1.4.4",
-    "enhanced-resolve": "^4.5.0",
-    "errno": "^0.1.8",
-    "escalade": "^3.1.1",
-    "esrecurse": "^4.3.0",
-    "esutils": "^2.0.3",
-    "events": "^3.3.0",
-    "fast-deep-equal": "^3.1.3",
-    "fast-json-stable-stringify": "^2.1.0",
-    "figgy-pudding": "^3.5.2",
-    "file-uri-to-path": "^1.0.0",
-    "find-cache-dir": "^3.3.1",
-    "find-up": "^4.1.0",
-    "gensync": "^1.0.0-beta.2",
-    "glob": "^7.1.6",
-    "glob-parent": "^5.1.2",
-    "global-prefix": "^3.0.0",
-    "globals": "^11.12.0",
-    "graceful-fs": "^4.2.6",
-    "hash-base": "^3.1.0",
-    "ieee754": "^1.2.1",
-    "inherits": "^2.0.4",
-    "ini": "^1.3.8",
-    "interpret": "^1.4.0",
-    "is-accessor-descriptor": "^1.0.0",
-    "is-binary-path": "^2.1.0",
-    "is-data-descriptor": "^1.0.0",
-    "is-descriptor": "^1.0.2",
-    "is-extendable": "^1.0.1",
-    "is-finite": "^1.1.0",
-    "js-calendar": "^1.2.3",
-    "js-datepicker": "^4.6.6",
-    "js-tokens": "^4.0.0",
-    "jsesc": "^2.5.2",
-    "json5": "^2.2.0",
-    "jspanel4": "^4.11.3",
-    "kind-of": "^6.0.3",
-    "loader-utils": "^1.4.0",
-    "loadjs": "^4.2.0",
-    "locate-path": "^5.0.0",
-    "lodash": "^4.17.21",
-    "make-dir": "^3.1.0",
-    "minimist": "^1.2.5",
-    "mkdirp": "^0.5.5",
-    "modly-js": "^0.0.11",
-    "ms": "^2.1.2",
-    "nan": "^2.14.2",
-    "neo-async": "^2.6.2",
-    "node-releases": "^1.1.71",
-    "p-limit": "^2.3.0",
-    "p-locate": "^4.1.0",
-    "p-try": "^2.2.0",
-    "pako": "^1.0.11",
-    "parallel-transform": "^1.2.0",
-    "parse-asn1": "^5.1.6",
-    "path-exists": "^4.0.0",
-    "pbkdf2": "^3.1.1",
-    "picomatch": "^2.2.2",
-    "pkg-dir": "^4.2.0",
-    "plyr": "^3.6.4",
-    "postcss": "^7.0.35",
-    "postcss-modules-local-by-default": "^3.0.3",
-    "postcss-modules-scope": "^2.2.0",
-    "postcss-selector-parser": "^6.0.4",
-    "postcss-value-parser": "^4.1.0",
-    "process-nextick-args": "^2.0.1",
-    "rangetouch": "^2.0.1",
-    "readable-stream": "^2.3.7",
-    "readdirp": "^3.5.0",
-    "regenerate": "^1.4.2",
-    "rimraf": "^2.7.1",
-    "safer-buffer": "^2.1.2",
-    "schema-utils": "^2.7.1",
-    "semver": "^6.3.0",
-    "source-map-resolve": "^0.5.3",
-    "source-map-url": "^0.4.1",
-    "stream-shift": "^1.0.1",
-    "strip-ansi": "^5.2.0",
-    "style-loader": "^1.3.0",
-    "supports-color": "^5.5.0",
-    "terser": "^4.8.0",
-    "terser-webpack-plugin": "^1.4.5",
-    "timers-browserify": "^2.0.12",
-    "to-fast-properties": "^2.0.0",
-    "tslib": "^1.14.1",
-    "uglify-js": "^3.13.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "unique-slug": "^2.0.2",
-    "uri-js": "^4.4.1",
-    "url-polyfill": "^1.1.12",
-    "v8-compile-cache": "^2.3.0",
-    "vanilla-js-calendar": "^1.1.0",
-    "vanilla-modal": "^1.6.5",
-    "watchpack": "^1.7.5",
-    "watchpack-chokidar2": "^2.0.1",
-    "weakmap-polyfill": "^2.0.1",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "xtend": "^4.0.2",
-    "y18n": "^4.0.1",
-    "yallist": "^3.1.1",
-    "yargs": "^13.3.2",
-    "yargs-parser": "^13.1.2"
-  },
+  "main": "dist/gdom.min.js",
   "scripts": {
+    "build": "NODE_OPTIONS=--openssl-legacy-provider webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -165,5 +23,34 @@
     "url": "https://github.com/arturo21/gdom/issues"
   },
   "homepage": "https://github.com/arturo21/gdom#readme",
-  "devDependencies": {}
+  "dependencies": {
+    "a-color-picker": "^1.2.1",
+    "accordion": "^3.0.2",
+    "accordion-js": "^2.8.0",
+    "calendar-js": "^1.4.4",
+    "crypto-js": "^3.3.0",
+    "js-calendar": "^1.2.3",
+    "js-datepicker": "^4.6.6",
+    "jspanel4": "^4.11.3",
+    "loadjs": "^4.2.0",
+    "lodash": "^4.17.21",
+    "modly-js": "^0.0.11",
+    "plyr": "^3.6.4",
+    "rangetouch": "^2.0.1",
+    "url-polyfill": "^1.1.12",
+    "vanilla-js-calendar": "^1.1.0",
+    "vanilla-modal": "^1.6.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
+    "babel-loader": "^9.2.1",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "terser-webpack-plugin": "^5.3.9",
+    "style-loader": "^3.3.4",
+    "css-loader": "^6.8.1",
+    "sass-loader": "^13.3.2",
+    "sass": "^1.69.5"
+  }
 }
